
Engine features:

* Added additional requirement properties to enemy and NPC map objects. The properties now match what is available for map events.
* When 'mouse aim' is disabled, the Shift key can now be used with the direction keys to change the player's orientation without moving.
* Added 'fog-of-war' feature (r-a-cristian-93)
* Added support for multiple equipment sets (r-a-cristian-93)

Engine fixes:

* Fix enemies not being able to target NPC followers
* Fix loot and sound effects being cleared in StatBlock files with multiple sections
* Fix potential crash when removing summons that would be out-of-bounds on the next map.
* Fix bug where a damage type with no name could be removed if another damage type was defined after it.
* Don't show hidden stats under 'Related Stats' section of tooltips of Character menu.
* Fix bug where negative regen wouldn't work if the resource was 100% full.
* Fix bug where negative regen would overflow after reaching zero.
* Fix bug that caused built-in effect types to be ignored by Power post_effect.
* Fix disappearing sprites due to render priority overflow.
* Fading of corpses is now correctly disabled when corpse_timeout=0 is used in engine/misc.txt.

Game updates:

* New formula for the 'Shield' power. Instead of Mental Damage, it is now based off a combination of player level, Mental stat, and Defense stat. This should increase its usefulness on mixed builds.
* Added 'Super' and 'Ultra' variants of Health and Mana potions. They can be obtained through the Alchemy system.
* Fixed Alchemist's Skirt so that it works with all potions.
* Prevent the player from damaging Mez before being trapped.
* Made Lezaith immune to slow/stun effects.



Flare v1.12 (https://flarerpg.org/2021/08/02/flare-1-12/)

Engine features:

* NPC interactions are now canceled when the player is attacked. 'combat_aborts_npc_interact' has been added to engine/misc.txt to control this setting.