@@ -36,6 +36,7 @@ FLARE.  If not, see http://www.gnu.org/licenses/
 #include "SharedGameResources.h"
 #include "SharedResources.h"
 #include "StatBlock.h"
+#include "UtilsMath.h"
 #include "UtilsParsing.h"
 
 CampaignManager::CampaignManager()
@@ -294,6 +295,41 @@ bool CampaignManager::checkRequirementsInVector(const std::vector<EventComponent
 	}
 
 	return true;
+}
+
+void CampaignManager::randomStatusAppend(const StatusID s) {
+	if (std::find(random_status_pool.begin(), random_status_pool.end(), s) == random_status_pool.end()) {
+		if (random_status_pool.empty())
+			random_status = s;
+
+		random_status_pool.push_back(s);
+	}
+}
+
+void CampaignManager::randomStatusClear() {
+	random_status_pool.clear();
+	random_status = 0;
+}
+
+void CampaignManager::randomStatusRoll() {
+	if (random_status_pool.empty())
+		return;
+
+	random_status = random_status_pool[Math::randBetween(0, static_cast<int>(random_status_pool.size()) - 1)];
+}
+
+void CampaignManager::randomStatusSet() {
+	if (random_status_pool.empty())
+		return;
+
+	setStatus(random_status);
+}
+
+void CampaignManager::randomStatusUnset() {
+	if (random_status_pool.empty())
+		return;
+
+	unsetStatus(random_status);
 }
 
 CampaignManager::~CampaignManager() {
