@@ -6,6 +6,7 @@ Engine features:
 * When 'mouse aim' is disabled, the Shift key can now be used with the direction keys to change the player's orientation without moving.
 * Added 'fog-of-war' feature (r-a-cristian-93)
 * Added support for multiple equipment sets (r-a-cristian-93)
+* Added random_status attribute to Events
 
 Engine fixes:
 
